# SHS_Digital_humanities

./: .gitignore  .gitmodules  EXECUTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MORANS_I_CALCULATION.md  PHASE2_5_IMPLEMENTATION_SUMMARY.md  PHASE3_ANALYSIS_OUTPUTS.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_README.md  PHASE7_FINAL_REPORT.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_SPRINT1_COMPLETION.md  PHASE7_SPRINT2_PLAN.md  REAL_DATA_IMPLEMENTATION_SUMMARY.md  SESHAT_CONTEXT_UPDATES.md  SESHAT_INTEGRATION_ANALYSIS.md  pyproject.toml
.claude/: settings.json
contexts/: ANALYSIS_CONTEXT_ERRORS.md  IMPLEMENTATION_RESOLUTION_SUMMARY.md  PHASE1_CONTEXT.md  PHASE2_5_CONTEXT.md  PHASE2_CONTEXT.md  PHASE3_CONTEXT.md  PHASE4_CONTEXT.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_CONTEXT.md  PHASE5_PLANNING.md  PHASE6_CONTEXT.md  PHASE7_CONTEXT.md  PHASE7_SPRINT2_PRIORITY2A_COMPLETE.md  PHASE7_SPRINT2_PRIORITY2B_COMPLETE.md  PHASE7_SPRINT2_PROGRESS.md  PHASE8_CONTEXT.md  PROJECT_CONTEXT.md
notebooks/: 01_data_ingestion.ipynb  02_harmonisation.ipynb  03_cross_source_analysis.py  04_temporal_patterns.py  05_geographic_analysis.py  06_spatial_analysis.ipynb  06_synthesis_indicators.py  07_conflict_resolution.py  07_diffusion_models.ipynb  08_phylogenetic_filtering.ipynb  10_robustness_analysis.ipynb  11_cluster_interpretation.ipynb  12_spatial_analysis.ipynb  13_diffusion_models.ipynb
phase7_visualization/: .gitignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  server.js  webpack.config.js
scripts/: 01_data_analysis.py  assign_remaining_clusters.py  build_matrix.py  calculate_morans_i_all_features.py  drh_fetch.py  export_for_phase7.py  generate_conflicts.py  geocode_drh.py  phase4_clustering.py  phase4_clustering_multisource.py  phase4_robustness.py  phase8_reanalysis.py  phase8_refinement.py  (+2 more)
(+121 files in other folders)
