[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shamanism-spatiotemporal"
version = "0.1.0"
description = "Spatio-temporal computational analysis of shamanism across world cultures"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shamanism Research Team"}
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "geopandas>=0.13",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "umap-learn>=0.5",
    "polars>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.11",
    "responses>=0.23",
    "black>=23.9",
    "ruff>=0.1",
    "jupyter>=1.0",
    "ipython>=8.12",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests for individual parsers",
    "integration: Integration tests for full pipelines",
    "validation: Data validation tests",
    "slow: Slow tests (API calls, large datasets)",
]
